human_written_tests/WebAssembly/processed_control_flow_validation/test_nop_1.wast
(assert_invalid
  (module (func $type-i32 (result i32) (nop)))
  "type mismatch"
)